[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/resources/Themes.tres" type="Theme" id=1]
[ext_resource path="res://src/scenes/SEARCH_PAGE.gd" type="Script" id=2]
[ext_resource path="res://src/utilities/Date_Selector_2.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/utilities/InputText.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/resources/fonts/Helvetica.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://src/resources/fonts/helvetica-rounded-bold-5871d05ead8de.otf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 5 )

[node name="SEARCH_PAGE" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_right = 1.0
margin_bottom = 115.0
theme = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "

[center][b][color=black]Procurador 3000[/color][/b][/center]"
text = "

Procurador 3000"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
anchor_right = 1.0
margin_top = 97.0
margin_bottom = 138.0
theme = ExtResource( 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][color=black]Preencha com os dados da entrada [/color][/center]"
text = "Preencha com os dados da entrada "

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 145.0
margin_right = -20.0
margin_bottom = -23.0
size_flags_vertical = 3

[node name="row" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 984.0
margin_bottom = 28.0

[node name="Label" type="Label" parent="VBoxContainer/row"]
margin_top = 2.0
margin_right = 205.0
margin_bottom = 25.0
rect_min_size = Vector2( 205, 0 )
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Cliente"

[node name="client_input" parent="VBoxContainer/row" instance=ExtResource( 4 )]
unique_name_in_owner = true
margin_left = 209.0
margin_right = 984.0

[node name="row2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 984.0
margin_bottom = 60.0

[node name="Label" type="Label" parent="VBoxContainer/row2"]
margin_top = 2.0
margin_right = 205.0
margin_bottom = 25.0
rect_min_size = Vector2( 205, 0 )
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Tipo de equipamento"

[node name="equip_input" parent="VBoxContainer/row2" instance=ExtResource( 4 )]
unique_name_in_owner = true
margin_left = 209.0
margin_right = 984.0

[node name="row3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 984.0
margin_bottom = 92.0

[node name="Label" type="Label" parent="VBoxContainer/row3"]
margin_top = 2.0
margin_right = 205.0
margin_bottom = 25.0
rect_min_size = Vector2( 205, 0 )
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Fabricante"

[node name="fab_input" parent="VBoxContainer/row3" instance=ExtResource( 4 )]
unique_name_in_owner = true
margin_left = 209.0
margin_right = 984.0

[node name="row4" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 984.0
margin_bottom = 120.0

[node name="Label" type="Label" parent="VBoxContainer/row4"]
margin_right = 205.0
margin_bottom = 23.0
rect_min_size = Vector2( 205, 0 )
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Identificação"

[node name="id_input" type="LineEdit" parent="VBoxContainer/row4"]
unique_name_in_owner = true
margin_left = 209.0
margin_right = 984.0
margin_bottom = 24.0
size_flags_horizontal = 3
theme = ExtResource( 1 )

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 124.0
margin_right = 984.0
margin_bottom = 128.0
theme = ExtResource( 1 )

[node name="row6" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 132.0
margin_right = 984.0
margin_bottom = 388.0
rect_min_size = Vector2( 0, 64 )
size_flags_vertical = 3
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/row6"]
margin_right = 984.0
margin_bottom = 256.0
size_flags_horizontal = 3
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/row6/HBoxContainer"]
margin_left = 290.0
margin_right = 490.0
margin_bottom = 256.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/row6/HBoxContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 200.0
margin_bottom = 91.0
rect_min_size = Vector2( 105, 0 )
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Data de entrada"

[node name="arrive_selector" parent="VBoxContainer/row6/HBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_top = 95.0
margin_right = 200.0
margin_bottom = 187.0

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/row6/HBoxContainer"]
margin_left = 494.0
margin_right = 694.0
margin_bottom = 256.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/row6/HBoxContainer/VBoxContainer2"]
margin_top = 68.0
margin_right = 200.0
margin_bottom = 91.0
rect_min_size = Vector2( 105, 0 )
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Data de saída"

[node name="departure_selector" parent="VBoxContainer/row6/HBoxContainer/VBoxContainer2" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_top = 95.0
margin_right = 200.0
margin_bottom = 187.0

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 392.0
margin_right = 984.0
margin_bottom = 396.0
theme = ExtResource( 1 )

[node name="row7" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 400.0
margin_right = 984.0
margin_bottom = 432.0
rect_min_size = Vector2( 0, 32 )

[node name="cancel" type="Button" parent="VBoxContainer/row7"]
margin_right = 191.0
margin_bottom = 32.0
rect_min_size = Vector2( 191, 0 )
theme = ExtResource( 1 )
text = "Cancelar"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/row7"]
margin_left = 195.0
margin_right = 789.0
margin_bottom = 32.0
size_flags_horizontal = 3
theme = ExtResource( 1 )

[node name="submit" type="Button" parent="VBoxContainer/row7"]
margin_left = 793.0
margin_right = 984.0
margin_bottom = 32.0
rect_min_size = Vector2( 191, 0 )
theme = ExtResource( 1 )
text = "Submeter"

[connection signal="button_up" from="VBoxContainer/row7/cancel" to="." method="_on_cancel_button_up"]
[connection signal="button_up" from="VBoxContainer/row7/submit" to="." method="_on_submit_button_up"]
